<?xml version="1.0"?>
<package format="2">
  <name>puru_joystick</name>
  <version>0.0.0</version>
  <description>The puru_joystick package</description>

  <maintainer email="asyraf@todo.todo">asyraf</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
 
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  

  <export>

  </export>
</package>
